# wasm-xchacha20poly1305-wrapper

./: Cargo.toml  LICENSE_MIT  README.md
benches/: crypto_benchmark.rs
src/: constants.rs  crypt_utils.rs  errors.rs  lib.rs
